# citechat

./: README.md  app.py  config.yaml  google_scholar.py  pyproject.toml  requirements.txt  test.py  test_gradio.py
modules/: app.py  arxiv_download.py  bibtex_convert.py  download_pdf.py  file_chunking.py  keyword_extraction.py  llms.py  search_papers.py  utils.py  vectorstore.py
vectorstore/faiss/: index.faiss  index.pkl
