[tool.poetry]
name = "citechat"
version = "0.1.0"
description = ""
authors = ["RafiDarmawan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.310"
ctransformers = "^0.2.27"
faiss-cpu = "^1.7.4"
sentence-transformers = "^2.2.2"
pypdf = "^3.16.2"
arxiv = "1.4.8"
bardapi = "^0.1.38"
gradio = "^3.47.1"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
